--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.profiles.active=dev
+spring.profiles.active=development
 #spring.profiles.active=dev,mysql,oracle,s3,filesystem
+#server.port=8081
+#notificador.email.host-servidor=smtp.algafood.com.br
+notificador.email.porta-servidor=28
