--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.profiles.active=development
-#spring.profiles.active=dev,mysql,oracle,s3,filesystem
-#server.port=8081
-#notificador.email.host-servidor=smtp.algafood.com.br
-notificador.email.porta-servidor=28
+spring.datasource.url=jdbc:mysql://192.168.1.36:3306/algafood?createDatabaseIfNotExist=true&connectionTimeZone=UTC&verifyServerCertificate=false
+spring.datasource.username=root
+spring.datasource.password=password
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
