--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://192.168.1.50:3306/algafood?createDatabaseIfNotExist=true&connectionTimeZone=UTC&verifyServerCertificate=false
+spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&connectionTimeZone=UTC&verifyServerCertificate=false
 spring.datasource.username=root
 spring.datasource.password=password
 
@@ -9,6 +9,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-ignored-properties=true
+
+spring.mvc.throw-exception-if-no-handler-found=true
+#spring.resources.add-mappings=false
+spring.web.resources.add-mappings=false
 
 
 #spring.jpa.generate-ddl=true
