--- a/src/main/resources/flyway.properties
+++ b/src/main/resources/flyway.properties
@@ -1,3 +1,3 @@
-flyway.url=jdbc:mysql://192.168.1.36:3306/algafood?createDatabaseIfNotExist=true&connectionTimeZone=UTC&verifyServerCertificate=false
+flyway.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&connectionTimeZone=UTC&verifyServerCertificate=false
 flyway.user=root
 flyway.password=password
