primeira parte modulo 11 com mixin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&connectionTimeZone=UTC&verifyServerCertificate=false
+spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&verifyServerCertificate=false&connectionTimeZone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 
