--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.web.resources.add-mappings=false
 
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#spring.jackson.property-naming-strategy=SNAKE_CASE
