--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 
@@ -31,3 +33,10 @@ spring.web.resources.add-mappings=false
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #spring.jackson.property-naming-strategy=SNAKE_CASE
+
+
+
+
+
+
+
