--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -5,3 +5,5 @@ spring.datasource.password=password
 spring.flyway.locations=classpath:db/migration
 
 spring.datasource.hikari.maximum-pool-size=1
+
+data.name=Kelson
