--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&verifyServerCertificate=false&connectionTimeZone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/algafood?createDatabaseIfNotExist=true&verifyServerCertificate=false&connectionTimeZone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 
@@ -19,6 +19,8 @@ spring.mvc.throw-exception-if-no-handler-found=true
 #spring.resources.add-mappings=false
 spring.web.resources.add-mappings=false
 
+#spring.servlet.multipart.max-file-size=20KB
+#spring.servlet.multipart.max-request-size=20MB
 
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
