--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<modelmapper.version>2.4.2</modelmapper.version>
 		<squiggly.version>1.3.18</squiggly.version>
 		<jasperreports.version>6.16.0</jasperreports.version>
+		<aws-java-sdk-s3.version>1.12.188</aws-java-sdk-s3.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -97,6 +98,11 @@
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports-functions</artifactId>
 			<version>${jasperreports.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>${aws-java-sdk-s3.version}</version>
 		</dependency>
 	</dependencies>
 
