--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,19 +5,30 @@ spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
-
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.deserialization.fail-on-ignored-properties=true
 
 spring.mvc.throw-exception-if-no-handler-found=true
-#spring.resources.add-mappings=false
 spring.web.resources.add-mappings=false
+
+algafood.storage.local.diretorio-fotos=C:\\Users/kanthony.CORP\\fotoSalva
+
+#algafood.storage.s3.id-chave-acesso=
+#algafood.storage.s3.chave-acesso-secreta=
+algafood.storage.s3.bucket=kelsonthonyfood-test
+algafood.storage.s3.regiao=us-east-1
+algafood.storage.s3.diretorio-fotos=catalogo
+algafood.storage.tipo=local
+
+
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+
+#spring.resources.add-mappings=false
 
 #spring.servlet.multipart.max-file-size=20KB
 #spring.servlet.multipart.max-request-size=20MB
@@ -36,6 +47,7 @@ spring.web.resources.add-mappings=false
 
 #spring.jackson.property-naming-strategy=SNAKE_CASE
 
+#armazenagem local
 
 
 
