--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+
+
 algafood.storage.local.diretorio-fotos=C:\\Users/kanthony.CORP\\fotoSalva
 
 #algafood.storage.s3.id-chave-acesso=
@@ -22,6 +24,20 @@ algafood.storage.s3.regiao=us-east-1
 algafood.storage.s3.diretorio-fotos=catalogo
 algafood.storage.tipo=local
 
+#email
+
+spring.mail.host=smtp.sendgrid.net
+spring.mail.port=587
+spring.mail.username=apikey
+#spring.mail.password=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
+
+#custom email
+algafood.email.remetente=AlgaFood <kelsonthonyaws1@gmail.com>
+
+#Freemarker 
+spring.freemarker.settings.locale=pt_BR
+algafood.email.impl=sandbox
+algafood.email.sandbox.destinatario=Kelson Anthony <k.thony@gmail.com>
 
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
