--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ algafood.storage.tipo=local
 
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
-spring.mail.username=apikey
-#spring.mail.password=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
+spring.mail.username=
+#spring.mail.password=
 
 #custom email
 algafood.email.remetente=AlgaFood <kelsonthonyaws1@gmail.com>
