--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,15 +28,15 @@ algafood.storage.tipo=local
 
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
-spring.mail.username=apikey
-#spring.mail.password=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
+spring.mail.username=newEmailKeyTestAlgaFood
+#spring.mail.password=
 
 #custom email
 algafood.email.remetente=AlgaFood <kelsonthonyaws1@gmail.com>
 
 #Freemarker 
 spring.freemarker.settings.locale=pt_BR
-algafood.email.impl=sandbox
+algafood.email.impl=fake
 algafood.email.sandbox.destinatario=Kelson Anthony <k.thony@gmail.com>
 
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
