--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/algafood?createDatabaseIfNotEx
 spring.datasource.username=root
 spring.datasource.password=password
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
