--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
-
+server.compression.enabled=true
 
 algafood.storage.local.diretorio-fotos=C:\\Users/kanthony.CORP\\fotoSalva
 
