--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.web.resources.add-mappings=false
 
 server.compression.enabled=true
 
+logging.loggly.token=seu_customer_token_log_here
+
 algafood.storage.local.diretorio-fotos=C:\\Users/kanthony.CORP\\fotoSalva
 
 #algafood.storage.s3.id-chave-acesso=
