--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,9 @@ spring.freemarker.settings.locale=pt_BR
 algafood.email.impl=fake
 algafood.email.sandbox.destinatario=Kelson Anthony <k.thony@gmail.com>
 
+#spring.security.user.name=algafood
+#spring.security.user.password=123456
+
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
