--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,11 @@ spring.freemarker.settings.locale=pt_BR
 algafood.email.impl=fake
 algafood.email.sandbox.destinatario=Kelson Anthony <k.thony@gmail.com>
 
+#security
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+
 #spring.security.user.name=algafood
 #spring.security.user.password=123456
 
