--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,10 +41,20 @@ spring.freemarker.settings.locale=pt_BR
 algafood.email.impl=fake
 algafood.email.sandbox.destinatario=Kelson Anthony <k.thony@gmail.com>
 
-#security
-spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
-spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+#security with opaque token
+#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+#spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
+#spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+
+#security with JWT
+spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pubkey.pem
+
+algafood.jwt.keystore.jks-location=classpath:keys/algafood.jks
+algafood.jwt.keystore.password=123456
+algafood.jwt.keystore.keypair-alias=algafood
+
+#DEBUG with Spring
+#logging.level.org.springframework=DEBUG
 
 #spring.security.user.name=algafood
 #spring.security.user.password=123456
