--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -43,5 +43,20 @@
     "name": "algafood.email.impl",
     "type": "java.lang.String",
     "description": "A description for 'algafood.email.impl'"
+  },
+  {
+    "name": "algafood.jwt.keystore.jks-location",
+    "type": "java.lang.String",
+    "description": "A description for 'algafood.jwt.keystore.jks-location'"
+  },
+  {
+    "name": "algafood.jwt.keystore.password",
+    "type": "java.lang.String",
+    "description": "A description for 'algafood.jwt.keystore.password'"
+  },
+  {
+    "name": "algafood.jwt.keystore.keypair-alias",
+    "type": "java.lang.String",
+    "description": "A description for 'algafood.jwt.keystore.keypair-alias'"
   }
 ]}
