--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         environment:
             MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
         ports:
-            - "3306:3306"
+            - "13306:3306"
         networks:
             - algafood-network
 
@@ -38,6 +38,7 @@ services:
             DB_HOST: algafood-mysql
             SPRING_SESSION_STORE_TYPE: redis
             SPRING_REDIS_HOST: algafood-redis
+            SPRING_PROFILES_ACTIVE: development
         #ports:
         # - "8080:8080"
         networks:
