--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -58,5 +58,10 @@
     "name": "algafood.jwt.keystore.keypair-alias",
     "type": "java.lang.String",
     "description": "A description for 'algafood.jwt.keystore.keypair-alias'"
+  },
+  {
+    "name": "logging.loggly.token",
+    "type": "java.lang.String",
+    "description": "A description for 'logging.loggly.token'"
   }
 ]}
