Implementado Spring security 3

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -15,6 +15,13 @@ spring.session.store-type=redis
 #algafood.jwt.keystore.password=
 #algafood.jwt.keystore.keypair-alias=
 
+algafood.auth.provider-url=https://auth.algafood.com.br
+
+#Resource server Opaque Token
+spring.security.oauth2.resourceserver.opaque-token.introspection-uri=http://localhost:8087/oauth2/introspect
+spring.security.oauth2.resourceserver.opaque-token.client-id=algafood-backend
+spring.security.oauth2.resourceserver.opaque-token.client-secret=backend123
+
 #Storage
 algafood.storage.tipo=s3
 algafood.storage.s3.diretorio-fotos=catalogo
