--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database
-spring.datasource.url=jdbc:mysql://${DB_HOST:127.0.0.1:3306}/algafood?createDatabaseIfNotExist=true&verifyServerCertificate=false&connectionTimeZone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/algafood?createDatabaseIfNotExist=true&verifyServerCertificate=false&connectionTimeZone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #Storage Sessions
@@ -15,7 +15,9 @@ server.compression.enabled=true
 
 spring.freemarker.settings.locale=pt_BR
 
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-know/jwks.json
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8087/oauth2/jwks
 
 server.forward-headers-strategy=framework
 
+#URL para a novo spring security
+algafood.auth.provider-url=http://localhost:8087 
