--- a/src/main/resources/flyway.properties
+++ b/src/main/resources/flyway.properties
@@ -1,3 +1,3 @@
-flyway.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&connectionTimeZone=UTC&verifyServerCertificate=false
+flyway.url=jdbc:mysql://${DB_HOST:127.0.0.1:3306}/algafood?createDatabaseIfNotExist=true&verifyServerCertificate=false&connectionTimeZone=UTC
 flyway.user=root
 flyway.password=password
