--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -106,5 +106,18 @@ spring.security.oauth2.resourceserver.opaque-token.client-secret=backend123
 
 
 
+#Swagger
+#springdoc.packages-to-scan.com.kelsonthony.algafood.api.v1
+#springdoc.packages-to-scan.com.kelsonthony.algafood.api.exceptionhandler
+#springdoc.packages-to-scan=com.kelsonthony.algafood.api
+#springdoc.paths-to-match=/v1/**
+springdoc.oAuthFLow.authorizationUrl=http://127.0.0.1:8087/oauth2/authorize
+springdoc.oAuthFlow.tokenUrl=http://127.0.0.1:8087/oauth2/token
+
+springdoc.swagger-ui.oauth.client-id=algafood-web
+springdoc.swagger-ui.oauth.client-secret=web123
+
+springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
+
 
 
