--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,17 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8087/oaut
 server.forward-headers-strategy=framework
 
 #URL para a novo spring security
-algafood.auth.provider-url=http://localhost:8087 
+algafood.auth.provider-url=http://localhost:8087
+
+#Swagger
+#springdoc.packages-to-scan.com.kelsonthony.algafood.api.v1
+#springdoc.packages-to-scan.com.kelsonthony.algafood.api.exceptionhandler
+#springdoc.packages-to-scan=com.kelsonthony.algafood.api
+#springdoc.paths-to-match=/v1/**
+springdoc.oAuthFLow.authorizationUrl=http://localhost:8087/oauth/authorize
+springdoc.oAuthFlow.tokenUrl=http://localhost:8087/oauth/token
+
+springdoc.swagger-ui.oauth.client-id=algafood-web
+springdoc.swagger-ui.oauth.client-secret=web123
+
+springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
