--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
 		<java.version>11</java.version>
 		<modelmapper.version>2.4.2</modelmapper.version>
 		<squiggly.version>1.3.18</squiggly.version>
-		<jasperreports.version>6.17.0</jasperreports.version>
-		<aws-java-sdk-s3.version>1.12.188</aws-java-sdk-s3.version>
-		<springfox.version>2.9.2</springfox.version>
+		<jasperreports.version>6.19.1</jasperreports.version>
+		<aws-java-sdk-s3.version>1.12.204</aws-java-sdk-s3.version>
 		<logback-ext-loggly.version>0.1.5</logback-ext-loggly.version>
-		<dockerfile-maven-version>1.4.13</dockerfile-maven-version>
 		<springauthserver.version>0.3.1</springauthserver.version>
+		<dockerfile-maven-version>1.4.13</dockerfile-maven-version>
+		<!--<springdoc.version>1.6.9</springdoc.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -118,33 +118,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>${springfox.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.plugin</groupId>
-					<artifactId>spring-plugin-core</artifactId>
-				</exclusion>
-			</exclusions>
+		<!--<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>${springfox.version}</version>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-hateoas</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-bean-validators</artifactId>
-			<version>${springfox.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.plugin</groupId>
-					<artifactId>spring-plugin-core</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-security</artifactId>
+			<version>${springdoc.version}</version>
+		</dependency>-->		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
