--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.wel
 
 server.forward-headers-strategy=framework
 
+server.port=8085
+
+#Email
+algafood.email.impl=fake
